<resources>
    <string name="app_name">Time Zone Converter</string>
    <string name="edit_message">..</string>
    <string name="button_convert">Convert</string>
    <string name="original_time">Original Time:</string>
    <string name="time_zone">Current Time Zone:</string>
    <string name="current_time">Current Time:</string>
    <string name="home_zone">Home Time Zone:</string>
    <string name="home_city"> Home City: </string>
    <string name="home_city_label">Baltimore</string>
    <string name="converted_label"> Converted Time: </string>
    <string name="converted_time"> Converted Time: </string>
    <string name="context_prefs">CONTEXT_PREFS</string>
    <string name="settingsText">Settings</string>
    <string name="settingsDescription">Settings</string>
    <string name="convertString">convert</string>
    <string name="set">Settings</string>
    <string name="home_time_zone">Home Time Zone</string>
    <string name="home_city_t">Home City</string>
    <string name="save_text">Save</string>

</resources>