<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    >

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="350dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#F1E9E9"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="341dp"
        android:layout_height="116dp"
        android:layout_centerVertical="true"
        android:background="#F1E9E9"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_1"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/save_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/currTimeZoneDropdown"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_1"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_1"
        app:layout_constraintVertical_bias="0.603" />

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_time_zone"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/currTimeZoneDropdown"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_1"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
        app:layout_constraintTop_toTopOf="@+id/rectangle_1"
        app:layout_constraintVertical_bias="0.424" />

    <TextView
        android:id="@+id/homeCityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_city_t"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2"
        app:layout_constraintVertical_bias="0.134" />

    <EditText
        android:id="@+id/homeCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_city_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2" />

</androidx.constraintlayout.widget.ConstraintLayout>